--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
                 <button type="button" class="btn btn-danger btn-lg" onClick="return show('final-page', 'container-consent');">
               <span class="glyphicon glyphicon-ban-circle"></span> I do <u><b>NOT</b></u> consent to these terms.
               </button> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <button type="button" class="btn btn-primary btn-lg" onClick="handleConsent();">
+                <button type="button" class="btn btn-primary btn-lg" onClick="return show('container-instructions1', 'container-consent');">
               <span class="glyphicon glyphicon-ok"></span> I Agree 
               </button>
             </center>
