--- a/public/index.html
+++ b/public/index.html
@@ -372,6 +372,6 @@
 <script src="static/lib/d3.v3.min.js"></script>
 <script src="static/lib/underscore-min.js"></script>
 <script src="static/lib/backbone-min.js"></script>
-<script src="index.js"></script>
+<script src="static/lib/index.js"></script>
 
 </html>
