revert generate and test files to original

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
             <div class="legal well">
                 <!-- **TODO** REPLACE COMPENSATION AND CONSENT FORM TO YOUR OWN-->
                 <p>
-                    Testing would like to invite you the take part in the following study named "Online Reaching Experiment: Aim For The Target!"
+                    We would like to invite you the take part in the following study named "Online Reaching Experiment: Aim For The Target!"
                 </p>
                 <p>
                     This will take approximately XX minutes, and you will be compensated $X.XX upon completion. <br> Please understand that we <em>reserve the right to not compensate entries</em> that fail to follow instructions during reaches.
@@ -277,7 +277,7 @@
     </div>
 
     <!-- Game page -->
-    <div id="container-exp" style="display:none">
+    <div id="" style="display:none">
     </div>
 
     <!-- Thank you page 
