--- a/public/index.html
+++ b/public/index.html
@@ -277,7 +277,7 @@
     </div>
 
     <!-- Game page -->
-    <div id="" style="display:none">
+    <div id="container-exp" style="display:none">
     </div>
 
     <!-- Thank you page 
